--- a/Suicide_Detection.ipynb
+++ b/Suicide_Detection.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,55 @@
     "        # 불용어가 아닌 단어(토큰)들로 이루어진 새로운 리스트 생성\n",
     "        clean_words = []\n",
     "        for word in words :\n",
-    "            if word not in stopwords_list :"
+    "            if word not in stopwords_list :\n",
+    "                clean_words.append(word)\n",
+    "                # join(list --> str 문장 붙이기) 불용어 제거\n",
+    "                clean_text = ' '.join(clean_words)\n",
+    "    else :\n",
+    "        # join(list --> str 문장 붙이기) 불용어 포함\n",
+    "        clean_text = ' '.join(words)\n",
+    "    return clean_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "- 함수 정의\n",
+    "\n",
+    "`def` 함수를 정의 , text 변수에 `re.sub` 사용해 영어 알파벳을 제외한 나머지를 공백으로 대체 합니다.\n",
+    "\n",
+    "- 토큰화\n",
+    "\n",
+    "words 변수에 `nltk.word_tokenized(text.lower())` 대문자를 소문자로 변환 하면서 토큰화를 진행 합니다.\n",
+    "\n",
+    "- 불용어\n",
+    "\n",
+    "stopwords_list 변수에 `stopowrds.words(’english’)` 사용해 불용어를 생성하고, `for`이용해 토큰화를 했던 words 변수를 word 변수에 담아서 `if`(True, False) 이용해 불용어가 없는 토큰화는 `clean_words.append(word)` clean_words 변수에 넣습니다.\n",
+    "\n",
+    "- 토큰화 —> 문자열 변환\n",
+    "\n",
+    "clean_text 변수에 불용어가 제거하고 문자열로 붙일 때 `' '.join(clean_words)` 사용 합니다.\n",
+    "\n",
+    "불용어를 제거 하지 않고 문자열로 붙일 때\n",
+    "\n",
+    "`' '.join(words)` 사용 합니다.\n",
+    "\n",
+    "`return` 으로 clean_text 변수를 반환 합니다.\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# text 컬럼에 대해서 전처리 함수 실행\n",
+    "df.text.apply(lambda x : preprocessing(x, remove_stopword=True)) #####"
    ]
   }
  ],
